--- a/prototype/welearn-css/main3.css
+++ b/prototype/welearn-css/main3.css
@@ -33731,3 +33731,8 @@ table, th, td {
         padding: 0 50px
     }
 }
+#main .module-2 .block-content .caption p .price {
+    float: left;
+    font-weight: 700;
+    font-size: 20px;
+}
