--- a/webroot/css/main2.css
+++ b/webroot/css/main2.css
@@ -24,3 +24,10 @@
     font-weight: 700;
     font-size: 20px;
 }
+.linethrough
+{
+    text-decoration: line-through;
+    font-size: 14px;
+    font-weight: 400;
+    color: #7b7878;
+}
